add blog favicon

--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -49,6 +49,41 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 问题得到解决(没解决可以试试重启一下终端)   
 [源网站](http://ibloodline.com/articles/2018/01/05/update-blog.html)
 
+## about页面内容问题
+
+## 分类管理问题
+
+Foo 5
+Bar 1
+Baz 1
+test/test 1
+opinion 1
+Photo 1
+Test 1
+tutorial 2
+
+## 标签管理问题
+
+Foo Bar Baz resources jekyll consectetur
+
+## 备份
+
+* 127.0.0.1:4000
+* https://giselle527.github.io/
+* bundle exec jekyll s
+* gem install bundle
+* $ jekyll -version
+* `<link rel="shortcut icon" type="image/ico" href="/favicon.ico">`
+* [用jkelly+githubPages搭建博客教程](http://blog.csdn.net/mouday/article/details/79300135)
+* [很好看的hexo博客主题](https://github.com/giselle527/hexo-theme-hollow)
+    - [效果](http://www.chen9.info/fragment/)
+* 可以参考的博客
+    - [稚晖的个人站](http://pengzhihui.xyz/about/)
+    - [john smith blog](https://codeasashu.github.io/hcz-jekyll-blog/)
+    - [L's blog](http://fanzhenyu.me/)和我用的同一模板
+    - [P_Chou Tech Space](http://www.pchou.info/index.html)好像用的也是同一模板
+    - [seoaqua's blog](http://seoaqua.com/)是跟SEO有关的博客
+
 
 
 
