--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -1,9 +1,11 @@
 ---
 title: githubPages+jekyll搭建博客和使用皮肤时遇到的问题
-description: so many problems.
-categories:
- - tutorial
+description: 
+categories: 前端
 tags:
+    - jekyll
+    - jekyll-theme
+    - blog
 ---
 
 
@@ -51,20 +53,7 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 
 ## about页面内容问题
 
-## 分类管理问题
-
-Foo 5
-Bar 1
-Baz 1
-test/test 1
-opinion 1
-Photo 1
-Test 1
-tutorial 2
-
-## 标签管理问题
-
-Foo Bar Baz resources jekyll consectetur
+## 怎么在网上写文章传到博客
 
 ## 备份
 
@@ -83,6 +72,7 @@ Foo Bar Baz resources jekyll consectetur
     - [L's blog](http://fanzhenyu.me/)和我用的同一模板
     - [P_Chou Tech Space](http://www.pchou.info/index.html)好像用的也是同一模板
     - [seoaqua's blog](http://seoaqua.com/)是跟SEO有关的博客
+    - [zixiaojindao](http://zixiaojindao.github.io/blogging/2012/09/30/jekyll-category-tag-recent-comment/)
 
 
 
