--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -23,13 +23,17 @@ jekyll 3.6.2 | Error:  SSL_connect returned=1 errno=0 state=error: certificate v
 
 ### 警告一：GitHub Metadata: No GitHub API authentication...
 
-这个错误是由于 gemfile 中使用到了 gem 'github-pages'。解决方案是添加 Github token 以及 cert 文件。
+这个错误是由于`gemfile` `中使用到了`gem github-pages`。解决方案是添加`Github token`以及cert文件。
 
 1. 参考 [create a personal access token](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)，在 Select scopes 时勾选 repo 即可。
+2. 打开 .bash_profile（或 .zshrc，或其他），添加如下代码，后面的字符串换成刚生成的 token。
 
-2. 打开 .bash_profile（或 .zshrc，或其他），添加代码 `export JEKYLL_GITHUB_TOKEN=abc123abc123abc123abc123abc123abc123abc123abc123`，后面的字符串换成刚生成的 token。
+```
+export JEKYLL_GITHUB_TOKEN=abc123abc123abc123abc123abc123abc123abc123abc123
 
-ps: 完全不知道什么是.bash_profile，在网上找到了[这个](https://superuser.com/questions/602872/how-do-i-modify-my-git-bash-profile-in-windows)，按照里面的步骤新建了 `.bashrc`文件，并写入了：
+```
+
+ps: 完全不知道什么是.bash_profile，在网上找到了[这个](https://superuser.com/questions/602872/how-do-i-modify-my-git-bash-profile-in-windows)，按照里面的步骤新建了`.bashrc`文件，并写入了：
 
 ```
 export JEKYLL_GITHUB_TOKEN=abc123abc123abc123abc123abc123abc123abc123abc123 
