--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -1,6 +1,6 @@
 ---
-title: githubPages+jekyll搭建博客和使用皮肤时遇到的问题
-description: 
+title: githubPages+jekyll搭建博客和使用jekyll模板
+description: win7系统在本地搭建jekyll编译环境和使用jekyll模板时遇到的问题和解决方法。
 categories: 前端
 tags:
     - jekyll
@@ -9,24 +9,46 @@ tags:
 ---
 
 
-## 启动jekyll server时报错
+## 错误：Liquid Exception: No repo name found...
+
+启动jekyll serve时报错。
+
+```
+jekyll serve
+  ...
+  Generating...
+  Liquid Exception: No repo name found. Specify using PAGES_REPO_NWO environment variables, 'repository' in your configuration, or set up an 'origin' git remote pointing to your github.com repository. in /xxxxxxxxxxxxxxxx.github.io/_layouts/default.html
+  ERROR: YOUR SITE COULD NOT BE BUILT:
+          ------------------------------------
+          No repo name found. Specify using PAGES_REPO_NWO environment variables, 'repository' in your configuration, or set up an 'origin' git remote pointing to your github.com repository.
+
+```
+
+在`_config.yml`文件中添加：
+
+```
+repository: username/username.github.io
+
+```
+
+将username替换成了我自己的username，问题得到解决。
+
+
+## 警告：GitHub Metadata: No GitHub API authentication...
+
+启动jekyll server时警告。
 
 ```
 $ bundle exec jekyll serve
-Configuration file: xxx/_config.yml
-   GitHub Metadata: No GitHub API authentication could be found. Some fields may be missing or have incorrect data.
-  Liquid Exception: SSL_connect returned=1 errno=0 state=error: certificate verify failed in /_layouts/post.html
-jekyll 3.6.2 | Error:  SSL_connect returned=1 errno=0 state=error: certificate verify failed
 
+GitHub Metadata: No GitHub API authentication could be found. Some fields may be missing or have incorrect data.
 
 ```
 
-### 警告一：GitHub Metadata: No GitHub API authentication...
+这个错误是由于`gemfile`中使用到了`gem github-pages`。解决方案是添加`Github token`以及cert文件。
 
-这个错误是由于`gemfile` `中使用到了`gem github-pages`。解决方案是添加`Github token`以及cert文件。
-
-1. 参考 [create a personal access token](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)，在 Select scopes 时勾选 repo 即可。
-2. 打开 .bash_profile（或 .zshrc，或其他），添加如下代码，后面的字符串换成刚生成的 token。
+1. 参考 [create a personal access token](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)，在Select scopes时勾选repo即可。
+2. 打开`.bash_profile`(或.zshrc等)，添加如下代码，后面的字符串换成刚生成的token。
 
 ```
 export JEKYLL_GITHUB_TOKEN=abc123abc123abc123abc123abc123abc123abc123abc123
@@ -43,7 +65,17 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 
 问题得到解决(没解决可以试试重启一下终端)。
 
-### 错误一：Liquid Exception: SSL_connect returned=1...
+## 错误：Liquid Exception: SSL_connect returned=1...
+
+启动jekyll server时报错。
+
+```
+$ bundle exec jekyll serve
+
+ Liquid Exception: SSL_connect returned=1 errno=0 state=error: certificate verify failed in /_layouts/post.html
+jekyll 3.6.2 | Error:  SSL_connect returned=1 errno=0 state=error: certificate verify failed
+
+```
 
 下载[cacert.pem](http://curl.haxx.se/ca/cacert.pem)文件(我的front-end仓库\tools下有该文件)，保存到`C:\Windows`下，在`.gitignore`中添加`*.pem`。再在前文提到的`.bash_profile`文件中添加`cacert.pem`的路径：
 
@@ -55,9 +87,31 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 问题得到解决(没解决可以试试重启一下终端)   
 [源网站](http://ibloodline.com/articles/2018/01/05/update-blog.html)
 
+## 加favicon.ico
+
+打开博客后f12查看html文档，发现<head>标签内部有如下内容：
+
+```
+<link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico?v=5.1.1" />
+
+```
+于是将favicon.ico图标放到了assets文件夹下，还是不能正常显示。又找到`_includes/_partials/head.html`文件，查找favicon，找到：
+
+```
+{% if site.favicon %}
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}?v={{ site.version }}" />
+{% endif %}
+
+```
+将`?v={{ site.version }}`去掉后，可以正常显示了。
+    
+[favicon图标在线制作](https://tool.lu/favicon/)
+
+
+
 ## about页面内容问题
 
-## 怎么在网上写文章传到博客
+## 改字体大小
 
 ## 备份
 
@@ -67,12 +121,15 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 * gem install bundle
 * $ jekyll -version
 * `<link rel="shortcut icon" type="image/ico" href="/favicon.ico">`
+* [自定义字体font awesome](https://fontawesome.com/)，弄明白怎么用
 * [用jkelly+githubPages搭建博客教程](http://blog.csdn.net/mouday/article/details/79300135)
 * [很好看的hexo博客主题](https://github.com/giselle527/hexo-theme-hollow)
     - [效果](http://www.chen9.info/fragment/)
 * 可以参考的博客
+    - [枳](http://fiona23.github.io/)，很值得研究
     - [稚晖的个人站](http://pengzhihui.xyz/about/)
     - [john smith blog](https://codeasashu.github.io/hcz-jekyll-blog/)
+    - [ezlippi浮生志](https://www.ezlippi.com/)，和我用的同一模板，但比我高级太多
     - [L's blog](http://fanzhenyu.me/)和我用的同一模板
     - [P_Chou Tech Space](http://www.pchou.info/index.html)好像用的也是同一模板
     - [seoaqua's blog](http://seoaqua.com/)是跟SEO有关的博客
