--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -107,6 +107,10 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
     
 [favicon图标在线制作](https://tool.lu/favicon/)
 
+## 在_post文件夹下的md文档中添加html代码块
+
+在html代码的行首添加`{% highlight html linenos %}`，在行尾添加`{% endhighlight %}`，中间的html代码不要有空行，否则会报错。
+
 
 
 ## about页面内容问题
