add new article

--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -1,9 +1,8 @@
 ---
 title: githubPages+jekyll搭建博客和使用jekyll模板
 description: win7系统在本地搭建jekyll编译环境和使用jekyll模板时遇到的问题和解决方法。
-categories: 前端
+categories: [前端, jekyll]
 tags:
-    - jekyll
     - jekyll-theme
     - blog
 ---
@@ -32,6 +31,7 @@ repository: username/username.github.io
 ```
 
 将username替换成了我自己的username，问题得到解决。
+
 
 
 ## 警告：GitHub Metadata: No GitHub API authentication...
@@ -65,6 +65,8 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 
 问题得到解决(没解决可以试试重启一下终端)。
 
+
+
 ## 错误：Liquid Exception: SSL_connect returned=1...
 
 启动jekyll server时报错。
@@ -85,7 +87,21 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 ```
 
 问题得到解决(没解决可以试试重启一下终端)   
-[源网站](http://ibloodline.com/articles/2018/01/05/update-blog.html)
+[出处](http://ibloodline.com/articles/2018/01/05/update-blog.html)
+
+
+
+## 错误：ERROR /ææ/year/month/day/title/ not found.
+
+博客文章的默认链接是`分类/时间/文章标题`，当分类设置成中文时，很容易报错。解决办法是修改`_config.yml`文件中的`permalink`。
+
+```
+permalink: /:year/:month/:day/:title  
+permalink: pretty //原始值，默认为 /:categories/:year/:month/:day/:title /
+
+```
+
+
 
 ## 加favicon.ico
 
@@ -98,24 +114,34 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 于是将favicon.ico图标放到了assets文件夹下，还是不能正常显示。又找到`_includes/_partials/head.html`文件，查找favicon，找到：
 
 ```
+{% raw %}
 {% if site.favicon %}
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}?v={{ site.version }}" />
 {% endif %}
+{% endraw %}
 
 ```
-将`?v={{ site.version }}`去掉后，可以正常显示了。
+将`{% raw %}?v={{ site.version }}{% endraw %}`去掉后，可以正常显示了。
     
 [favicon图标在线制作](https://tool.lu/favicon/)
 
+
+
 ## 在_post文件夹下的md文档中添加html代码块
 
-在html代码的行首添加`{% highlight html linenos %}`，在行尾添加`{% endhighlight %}`，中间的html代码不要有空行，否则会报错。
+在html代码的首尾添加如下内容
+
+```
+{% raw %}
+{% highlight html linenos %}
+// html代码内容
+{% endhighlight %}
+{% endraw %}
+
+```
+中间的html代码不要有空行，否则会报错。
 
 
-
-## about页面内容问题
-
-## 改字体大小
 
 ## 备份
 
@@ -123,6 +149,7 @@ export SSL_CERT_FILE=C:Windows/cacert.pem
 * https://giselle527.github.io/
 * bundle exec jekyll s
 * gem install bundle
+* rake post title="article name"
 * $ jekyll -version
 * `<link rel="shortcut icon" type="image/ico" href="/favicon.ico">`
 * [自定义字体font awesome](https://fontawesome.com/)，弄明白怎么用
