--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -5,6 +5,7 @@ categories: [前端, jekyll]
 tags:
     - jekyll-theme
     - blog
+    - jekyll problems
 ---
 
 
@@ -127,7 +128,26 @@ permalink: pretty //原始值，默认为 /:categories/:year/:month/:day/:title 
 
 
 
-## 在_post文件夹下的md文档中添加html代码块
+## 高亮代码和显示代码行号
+
+在代码的首尾添加如下内容
+
+```
+{% raw %}
+{% highlight 代码名 linenos %}
+// 代码内容
+{% endhighlight %}
+{% endraw %}
+
+```
+
+* highlight：高亮代码
+* linenos：显示行号
+* `{% raw %}{ % 内容 % }、{{ 内容 }}{% endraw %}`需要转义才能原样输出
+    - 转义方法：在前后加上`{ % raw % }{ % endraw % }`(要去掉花括号和百分号之间的空格)
+* 经验证，linenos不一定生效，暂不研究。
+
+### 在_post文件夹下的md文档中添加html代码块
 
 在html代码的首尾添加如下内容
 
@@ -140,7 +160,6 @@ permalink: pretty //原始值，默认为 /:categories/:year/:month/:day/:title 
 
 ```
 中间的html代码不要有空行，否则会报错。
-
 
 
 ## 备份
