upload jnshu mytask2

--- a/_posts/2018-02-24-fontsize.md
+++ b/_posts/2018-02-24-fontsize.md
@@ -14,31 +14,27 @@ tags: [font-size]
 
 em是一个相对值，相对于父元素的字体大小进行计算，em值=子元素的字体大小/父元素的字体大小。
 
-> 假设父元素为16px，子元素的em值为1.4em，子元素实际的像素值是16x1.4=22.rpx
+> 假设父元素为16px，子元素的em值为1.4em，子元素实际的像素值是16x1.4=22.4px
+
+### [px和em值的转换工具](http://pxtoem.com/)
+
+点击↑标题进入工具页面，左边的图不用参考，主要使用右边的计算工具(enter a base pixel size处输入父元素的字体大小)。
 
 ## rem
 
-rem也是一个相对值，相对于页面根元素<html>的字体大小进行计算。
-   
-![字体大小值标准参考图](/images/emTable.png "font-size参考图")
-
-我不知道是怎么计算的，但很神奇的是，假定html的字体大小为10px，见下：
-
-```
-html{
-    font-size: 62.5%;
-    <!-- 
-        10 / 16 * 100% = 62.5%
-        10 / 12 * 75% = 62.5%
-        10 / 21 * 131.3% = 62.5%
-        ……
-
-     -->
-}
-
-body{
-    font-size: 1.4rem; // 1.4=14px/10px，也就是body的字体大小/html字体大小，那算出html的font-size为62.5%的意义是什么呢？
-
-}
+1. rem也是一个相对值，相对于页面根元素<html>的字体大小进行计算。假设浏览器默认的html字体大小为16px，那么1rem=16px；同理，假设浏览器默认的html字体大小为20px，那么1rem=20px。     
+2. 通过rem既可以做到只修改根元素就成比例地调整所有字体大小，又可以避免字体大小逐层复合的连锁反应。    
+3. 目前，除了IE8及更早版本外，所有浏览器均已支持rem。兼容老版本的方法就是多写一个绝对单位的声明（见后），不支持rem的浏览器会忽略用rem设定的字体大小。    
+4. 总的来说，如果不需要兼容老版本的浏览器，用rem最合适。
 
 ```
+// 假设浏览器html默认字体大小为20px，要设置div的字体大小为50px
+
+div{font-size: 2.5em;} //不考虑老版本浏览器
+div{font-size: 50px; font-size: 2.5em;} //兼容老版本浏览器
+
+```
+
+### [px和rem值的转换工具](http://pxtoem.com/)
+
+点击↑标题进入工具页面，左边的图是在默认浏览器的html字体大小为16px的基础上计算得出来的参考图，不用细究。主要使用右边的计算工具(enter a base pixel size处输入html元素的字体大小)。
