--- a/_posts/2018-02-23-less.md
+++ b/_posts/2018-02-23-less.md
@@ -216,11 +216,16 @@ arguments变量可以代表所有的参数，例：
 * round(5.5); //6 四舍五入
 * ceil(2.3); //3 向上取整
 * floor(2.6); //2 向下取整
+* percentage(0.5); //50% 取百分数
+* min(10%,20%,30%,40%); //10%  取最小值
+* max(10%,20%,30%,40%); //40%  取最大值
 
 使用：
 
 ```
-border: round(5.5)x1px solid red; // border:6px solid red;
+width: 10px+4; // 14px
+border: round(5.5)*1px solid red; // border:6px solid red;
+color: #222+#333; //颜色也可以相加
 
 ```
 #### 命名空间
