renew fontsize & img-self-adaption

--- a/_posts/2018-02-24-fontsize.md
+++ b/_posts/2018-02-24-fontsize.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "字体大小单位：px/em/rem"
-description: 
+description: px/em/rem的利弊，px和em的转换。
 categories: [前端]
 tags: [font-size]
 ---
@@ -26,6 +26,7 @@ em是一个相对值，相对于父元素的字体大小进行计算，em值=子
 2. 通过rem既可以做到只修改根元素就成比例地调整所有字体大小，又可以避免字体大小逐层复合的连锁反应。    
 3. 目前，除了IE8及更早版本外，所有浏览器均已支持rem。兼容老版本的方法就是多写一个绝对单位的声明（见后），不支持rem的浏览器会忽略用rem设定的字体大小。    
 4. 总的来说，如果不需要兼容老版本的浏览器，用rem最合适。
+5. 配合媒体查询使用，可以实现网页自适应，计算公式：`写入CSS的尺寸/屏幕宽度 = UI图标注的尺寸/UI图宽度`
 
 ```
 // 假设浏览器html默认字体大小为20px，要设置div的字体大小为50px
