change default-browser to browser

--- a/_posts/2018-02-28-browser.md
+++ b/_posts/2018-02-28-browser.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "修改默认浏览器"
-description: 
-categories: []
-tags: []
+description: win7系统下用注册表修改默认浏览器的方法。
+categories: [备份]
+tags: [默认浏览器, chrome]
 ---
 
 ## 在注册表中修改默认浏览器
