fix about tab bar & sidebar dot

--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -161,6 +161,27 @@ permalink: pretty //原始值，默认为 /:categories/:year/:month/:day/:title 
 ```
 中间的html代码不要有空行，否则会报错。
 
+## 转义字符的方法
+
+### 使用`\`转义
+
+```
+git reset --hard HEAD^^回退到上上个版本
+
+```
+
+* 没使用转义的效果
+  - git reset --hard HEAD^^回退到上上个版本
+* 使用转义后的效果
+  - git reset \-\-hard HEAD^^回退到上上个版本
+
+### 在两个大括号之间添加一个空格
+
+两对大括号在jekyll中有特殊含义，因此要转义。
+
+### 使用raw语法
+
+`{ % raw % }内容{ % endraw % }`，去掉{和%之间的空格。
 
 ## 备份
 
