never-give-up post

--- a/_posts/2018-02-12-problems.md
+++ b/_posts/2018-02-12-problems.md
@@ -192,6 +192,12 @@ git reset --hard HEAD^^回退到上上个版本
 * rake post title="article name"
 * $ jekyll -version
 * `<link rel="shortcut icon" type="image/ico" href="/favicon.ico">`
+* 去掉sidebar社交链接左边颜色随机的小圆点
+  - 修改根目录下的文件：`\_sass\_schemes\Mist\_base.scss`，添加`.links-of-author a:before{ display:none !important; }`，Mist是我使用的主题名。
+* 改about页面打开后在浏览器标签栏上显示的文字
+  - 对应根目录下的文件：`\_includes\_blocks\title.html`，其中`__`代表语言文件，我使用的中文，改的是中文里面about对应的翻译。
+* 去掉about页面在index.html中加入`type: about`语句后显示在页面上的文字
+  - 对应根目录下的文件：`\_includes\_partials\page-header.html`，在判断是about页面后，删掉花括号里对应的执行语句（不能连判断也一起删掉，会没效果）。
 * [自定义字体font awesome](https://fontawesome.com/)，弄明白怎么用
 * [用jkelly+githubPages搭建博客教程](http://blog.csdn.net/mouday/article/details/79300135)
 * [很好看的hexo博客主题](https://github.com/giselle527/hexo-theme-hollow)
