--- a/_posts/2018-02-13-exercise.md
+++ b/_posts/2018-02-13-exercise.md
@@ -1,21 +1,34 @@
 ---
-title: 技能树
-description: 罗列已经完成了的前端技能树任务。
+title: 小DEMO
+description: 罗列部分前端练习。
 categories: 前端
-tags:
+tags: 
+    - 晚餐吃什么
+    - 倒计时
+    - 减重打卡表
+    - html&css笔记
     - 技能树
     - 九宫格
+    - 魔镜
 
 ---
 
 <p>
 	在技能树上领的任务，列在这里，方便查看。
 </p>
-<ul class="jnshu">
-	<li><a href="#task0">task0: </a><a href="/jnshu/mytask0.html">九宫格</a></li>
+<ul class="exercise">
+	<li><a href="#task0">task0: </a><a href="/exercise/mytask0.html">九宫格</a></li>
 	<li><a href="https://giselle527.github.io/">见字如面blog</a></li>
-	<li><a href="#task2">task2: </a><a href="/jnshu/mytask2/index.html">魔镜</a></li>
+	<li><a href="#task2">task2: </a><a href="/exercise/mytask2/index.html">魔镜</a></li>
 </ul>
+<p>
+  学习早期写的小demo，一个demo，一段回忆。
+</p>
+<li><a href="/exercise/what's for dinner/what's for dinner.html">晚餐吃什么</a></li>
+<li><a href="/exercise/CountdownTimer/index.html">倒计时</a></li>
+<li><a href="/exercise/loseweight sheet/12.21-loseweight.html">减重打卡表</a></li>
+<li><a href="/exercise/html css note index/index.html">html&css笔记</a></li>
+
 
 ## <a id="task0">九宫格</a>
 
