add countdown timer post

--- a/_posts/2018-03-10-dinner.md
+++ b/_posts/2018-03-10-dinner.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "晚餐吃什么"
-description: 经常纠结晚上吃什么，于是写了这个。
+title: "晚餐吃什么哩？"
+description: 经常纠结晚上吃什么，于是写了这个，可以随机选择晚餐吃什么。
 categories: [前端, 备份]
 tags: [dinner, 吃什么]
 ---
@@ -13,4 +13,4 @@ tags: [dinner, 吃什么]
 
 ## 随机选择晚餐
 
-<li><a href="/exercise/what's for dinner/what's for dinner.html" target="_blank">晚餐吃什么</a></li>
+<a href="/exercise/what's for dinner/what's for dinner.html" target="_blank">点我看晚餐吃什么</a>
